--- a/xiaomi.html
+++ b/xiaomi.html
@@ -3,15 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>小米官网</title>
-	<!-- <script src="js/xiaomi.js"></script> -->
-
-	<script src="js/jq.js"></script>
 	<script src="js/animate.js"></script>
 	<script src="js/jquery-3.3.1.js"></script>
 	<link rel="stylesheet" href="https://at.alicdn.com/t/font_820987_heoa462omls.css">
 	<link rel="stylesheet" href="https://at.alicdn.com/t/font_820987_zgmejkufo4.css">
 	<link rel="stylesheet" href="https://at.alicdn.com/t/font_779203_x3zl6l015hb.css">
 	<link rel="stylesheet" href="css/xiaomi.css">
+	<script src="js/jq.js"></script>
 </head>
 <body>
 	<!-- 顶部开始 -->
@@ -26,7 +24,7 @@
 			<li>
 				<i class="iconfont icon-gouwuche"></i>
 			</li>
-			<li>
+			<li class="zhiding">
 				<i class="iconfont icon-zhiding"></i>
 			</li>
 		</ul>
@@ -1462,9 +1460,9 @@
 	<div class="top">
 				<p>配件</p>
 				<div class="lis1">
-					<a href="" >其他配件</a>
+					<a href="">其他配件</a>
 					<a href="">保护套</a>
-					<a href="" >贴膜</a>
+					<a href="">贴膜</a>
 					<a href="" class="active2">热门</a>	
 				</div>
 			</div>
